Update build scripts and Vercel configuration for deployment improvements
- Changed vercel-build command to use a Node.js script for better compatibility.
- Updated install command to use npm install for more flexibility in dependency management.
- Specified build command in Vercel configuration to streamline the deployment process.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "vercel-build": "bash vercel-build.sh",
+    "vercel-build": "node vercel-build.js",
     "server:migrate": "cd server && npm run migrate",
     "server:seed": "cd server && npm run seed",
     "server:setup-db": "cd server && npm run setup-db",
