--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "vercel-build": "vite build && npm run build:chat",
     "server:migrate": "cd server && npm run migrate",
     "server:seed": "cd server && npm run seed",
     "server:setup-db": "cd server && npm run setup-db",
