--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:coverage": "vitest run --coverage",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "vercel-build": "vite build && npm run build:chat",
+    "vercel-build": "node -e \"const { execSync } = require('child_process'); try { execSync('vite build', { stdio: 'inherit' }); execSync('cross-env VITE_APP_MODE=chat vite build --config vite.chat.config.js', { stdio: 'inherit' }); } catch (e) { process.exit(1); }\"",
     "server:migrate": "cd server && npm run migrate",
     "server:seed": "cd server && npm run seed",
     "server:setup-db": "cd server && npm run setup-db",
